--- a/package.json
+++ b/package.json
@@ -16,6 +16,13 @@
     "postcss": "^8.5.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-markdown": "^10.1.0",
+    "react-syntax-highlighter": "^15.6.1",
+    "rehype-autolink-headings": "^7.1.0",
+    "rehype-raw": "^7.0.0",
+    "rehype-toc": "^3.0.2",
+    "remark-gfm": "^4.0.1",
+    "remark-slug": "^7.0.1",
     "tailwindcss": "^4.1.3"
   },
   "devDependencies": {
