--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "homepage": "https://kiki3177.github.io/devops_dataops_board_game_tutorial/",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
