--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "devsecops-board-game",
-  "private": true,
+  "private": false,
   "version": "0.0.0",
   "type": "module",
   "homepage": "https://kiki3177.github.io/devops_dataops_board_game_tutorial/",
